--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-	"name": "helloworld-sample",
-	"displayName": "helloworld-sample",
-	"description": "HelloWorld example for VS Code",
+	"name": "pathological",
+	"displayName": "Pathological",
+	"description": "A path manipulation extension for Visual Studio Code.",
 	"version": "0.0.1",
-	"publisher": "vscode-samples",
-	"repository": "https://github.com/Microsoft/vscode-extension-samples/helloworld-sample",
+	"publisher": "IEvangelist",
+	"repository": "https://github.com/IEvangelist/pathological",
 	"engines": {
 		"vscode": "^1.74.0"
 	},
@@ -16,8 +16,8 @@
 	"contributes": {
 		"commands": [
 			{
-				"command": "extension.helloWorld",
-				"title": "Hello World"
+				"command": "extension.pathological",
+				"title": "Pathological"
 			}
 		]
 	},
