Added normalize path config

--- a/package.json
+++ b/package.json
@@ -85,6 +85,11 @@
           "type": "number",
           "description": "The number of spaces to indent when rendering as a file-system tree.",
           "default": 4
+        },
+        "pathological.normalizePath": {
+          "type": "boolean",
+          "description": "Whether or not to normalize the path when copying relative path.",
+          "default": false
         }
       }
     }
