--- a/package.json
+++ b/package.json
@@ -106,7 +106,7 @@
     "format-check": "prettier --check \"**/*.ts\"",
     "watch": "tsc -watch -p ./",
     "pretest": "npm run compile",
-    "test": "node ./out/test/runTest.js"
+    "test": "node ./out/test/runTest.js --trace-warnings"
   },
   "devDependencies": {
     "@types/glob": "^7.1.1",
