--- a/package.json
+++ b/package.json
@@ -107,19 +107,20 @@
     "format-check": "prettier --check \"**/*.ts\"",
     "watch": "tsc -watch -p ./",
     "pretest": "npm run compile",
-    "test": "node ./out/test/runTest.js --trace-warnings"
+    "test": "node ./out/test/runTest.js"
   },
   "devDependencies": {
     "@types/glob": "^7.1.1",
-    "@types/mocha": "^10.0.1",
     "@types/node": "^20.6.3",
     "@types/vscode": "^1.82.0",
     "@typescript-eslint/eslint-plugin": "^6.7.2",
     "@typescript-eslint/parser": "^6.7.2",
     "@vscode/test-electron": "^2.3.0",
+    "@types/jest": "^29.5.5",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.1",
     "eslint": "^8.49.0",
     "glob": "^7.1.4",
-    "mocha": "^10.2.0",
     "source-map-support": "^0.5.12",
     "typescript": "^5.2.2",
     "eslint-config-prettier": "^8.5.0",
