--- a/package.json
+++ b/package.json
@@ -7,10 +7,8 @@
   "repository": "https://github.com/IEvangelist/pathological",
   "license": "MIT",
   "engines": {
-    "vscode": "^1.82.2",
-    "node": ">=16"
+    "vscode": "^1.82.0"
   },
-  "type": "module",
   "categories": [
     "Other"
   ],
@@ -110,23 +108,24 @@
     "test": "node ./out/test/runTest.js"
   },
   "devDependencies": {
-    "@types/glob": "^7.1.1",
+    "@types/glob": "^8.1.0",
     "@types/node": "^20.6.3",
     "@types/vscode": "^1.82.0",
     "@typescript-eslint/eslint-plugin": "^6.7.2",
     "@typescript-eslint/parser": "^6.7.2",
     "@vscode/test-electron": "^2.3.0",
-    "@types/jest": "^29.5.5",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.1.1",
+    "@types/mocha": "^10.0.2",
+    "mocha": "^10.2.0",
+    "glob": "^8.1.0",
     "eslint": "^8.49.0",
-    "glob": "^7.1.4",
+    "ts-node": "^10.9.1",
     "source-map-support": "^0.5.12",
     "typescript": "^5.2.2",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.8.3",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "cross-env": "^7.0.3"
   },
   "dependencies": {
     "@vscode/vsce": "^2.21.1"
