--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
 		"src"
 	],
 	"compilerOptions": {
-		"module": "esnext",
+		"module": "CommonJS",
 		"target": "ES2020",
 		"esModuleInterop": true,
 		"forceConsistentCasingInFileNames": true,
