--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,4 +26,4 @@ jobs:
       - run: npm run format-check
       - run: npm run lint
       - run: npm run compile
-      - run: npm run test
+      - run: xvfb-run -a npm run test
