--- a/package.json
+++ b/package.json
@@ -29,6 +29,11 @@
         "command": "pathological.getAsFileSystemTree",
         "title": "Copy as File System Tree",
         "shortTitle": "As Tree"
+      },
+      {
+        "command": "pathological.getAsFlatList",
+        "title": "Copy as Flat List",
+        "shortTitle": "As Flat List"
       }
     ],
     "menus": {
@@ -45,6 +50,11 @@
         {
           "when": "explorerResourceIsFolder",
           "command": "pathological.getAsFileSystemTree",
+          "group": "6_copypath"
+        },
+        {
+          "when": "explorerResourceIsFolder",
+          "command": "pathological.getAsFlatList",
           "group": "6_copypath"
         }
       ]
