--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,6 +29,7 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - run: npm run format-check
+        if : runner.os != 'Windows'
       - run: npm run lint
       - run: npm run compile
       - run: xvfb-run -a npm run test
