--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -153,21 +153,22 @@ jobs:
         with:
           pat: ${{ secrets.PUBLISHER_KEY }}
           registryUrl: https://marketplace.visualstudio.com
-          extensionFile: ./vscode-github-actions-${{ needs.release.outputs.version }}.vsix
+          # extensionFile: ./vscode-github-actions-${{ needs.release.outputs.version }}.vsix
+          packagePath: /home/runner/work/pathological/pathological/pathological-${{ needs.release.outputs.version }}.vsix
 
-  open-vsx-publish:
-    name: Publish to Open VSX Registry
-    needs: release
-    environment: publish-open-vsx
-    runs-on: ubuntu-latest
-    env:
-      OPEN_VSX_TOKEN: ${{ secrets.OPEN_VSX_TOKEN }}
-    steps:
-      - name: Download artifact
-        uses: actions/download-artifact@e9ef242655d12993efdcda9058dee2db83a2cb9b
-        with:
-          name: vscode-github-actions-${{ needs.release.outputs.version }}.vsix
+  # open-vsx-publish:
+  #   name: Publish to Open VSX Registry
+  #   needs: release
+  #   environment: publish-open-vsx
+  #   runs-on: ubuntu-latest
+  #   env:
+  #     OPEN_VSX_TOKEN: ${{ secrets.OPEN_VSX_TOKEN }}
+  #   steps:
+  #     - name: Download artifact
+  #       uses: actions/download-artifact@e9ef242655d12993efdcda9058dee2db83a2cb9b
+  #       with:
+  #         name: vscode-github-actions-${{ needs.release.outputs.version }}.vsix
 
-      - name: Publish to Registry
-        run: |
-          npx ovsx publish -p $OPEN_VSX_TOKEN *.vsix
+  #     - name: Publish to Registry
+  #       run: |
+  #         npx ovsx publish -p $OPEN_VSX_TOKEN *.vsix
