--- a/package.json
+++ b/package.json
@@ -2,13 +2,20 @@
   "name": "pathological",
   "displayName": "Pathological",
   "description": "A path manipulation extension for Visual Studio Code.",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "publisher": "IEvangelist",
-  "repository": "https://github.com/IEvangelist/pathological",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/IEvangelist/pathological.git"
+  },
+  "bugs": {
+    "url": "https://github.com/IEvangelist/pathological/issues"
+  },
   "license": "MIT",
   "engines": {
     "vscode": "^1.82.0"
   },
+  "icon": "images/icon.png",
   "categories": [
     "Other"
   ],
