--- a/package.json
+++ b/package.json
@@ -127,6 +127,11 @@
           "description": "The number of spaces to indent when rendering as a file-system tree.",
           "default": 4
         },
+        "pathological.stats": {
+          "type": "boolean",
+          "description": "Whether or not to evaluate the file-system stats. Requires an expensive I/O-bound operation, reading files.",
+          "default": false
+        },
         "pathological.normalizedPathSeparator": {
           "type": "string",
           "description": "Represents the path separator to use when copying relative paths. If not provided, uses the system default."
