--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,7 +34,7 @@ jobs:
 
       - uses: actions/setup-node@2a017f350dbf6c4b6bb4508cc83809719115162e
         with:
-          node-version: "18"
+          node-version: 20.x
 
       - name: Bump version and push
         run: |
@@ -62,7 +62,7 @@ jobs:
 
       - uses: stefanzweifel/git-auto-commit-action@3ea6ae190baf489ba007f7c92608f33ce20ef04a
         with: 
-          branch: release/${{ env.new_version }}
+            branch: release/${{ github.event.inputs.version }}
         if: ${{ inputs.update-language-server }}
 
       - name: Create PR
