--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,9 +18,9 @@ jobs:
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout
-        uses: actions/checkout@8530928916aaef40f59e6f221989ccb31f5759e7
+        uses: actions/checkout@main
       - name: Install Node.js
-        uses: actions/setup-node@2a017f350dbf6c4b6bb4508cc83809719115162e
+        uses: actions/setup-node@main
         with:
           node-version: 20.x
           cache: "npm"
