--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,9 +30,9 @@ jobs:
       pull-requests: write
 
     steps:
-      - uses: actions/checkout@8530928916aaef40f59e6f221989ccb31f5759e7
+      - uses: actions/checkout@main
 
-      - uses: actions/setup-node@2a017f350dbf6c4b6bb4508cc83809719115162e
+      - uses: actions/setup-node@main
         with:
           node-version: 20.x
 
@@ -60,7 +60,7 @@ jobs:
           git checkout -- package.json
           npm i
 
-      - uses: stefanzweifel/git-auto-commit-action@3ea6ae190baf489ba007f7c92608f33ce20ef04a
+      - uses: stefanzweifel/git-auto-commit-action@master
         with: 
             branch: release/${{ github.event.inputs.version }}
         if: ${{ inputs.update-language-server }}
